<resources>
    <string name="app_name">eSewa Market</string>
    <string name="back_arrow">Back</string>
    <string name="close_btn">Close</string>
    <string name="post_product">Post Product</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="next_step_two">NEXT: Product Details</string>
    <string name="product_title">Product Title</string>
    <string name="asterisk">*</string>
    <string name="enter_title">Enter Title</string>
    <string name="size_less_than">SIZE LESS THAN</string>
    <string name="one_mb">1MB</string>
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="step_three">Step Three</string>
    <string name="step_four">Step Four</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="full_name">FULL NAME</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="add_new_address">Add your new address</string>
    <string name="details_for_shipping">Details for shipping</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="address">Address Line</string>
    <string name="enter_address">Enter Address Line</string>
    <string name="location_icon">Location</string>
    <string name="select_a_label">Select a label</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="default_string_address">Make this as a default shipping address</string>
    <string name="default_billing_address">Make this as a default billing address</string>
    <string name="save">Save</string>
    <string name="alert_dialog_delete">Do you want to delete all favourite products?</string>
</resources>