<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Card.Match"
    android:background="#E6ECF4"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        style="@style/Widget.Card.Match"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            style="@style/Widget.Card.MatchWrap"
            android:paddingHorizontal="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="24dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Widget.Card.Wrap"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/Widget.Card.Wrap"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Widget.Card.Wrap"
                        android:minHeight="23dp"
                        android:minWidth="23dp"
                        android:background="@drawable/bg_green_circle"
                        android:contentDescription="@string/step_one"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/one"/>

                    <TextView
                        style="@style/Widget.Card.Wrap"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:letterSpacing="0.05"
                        android:text="@string/upload_photo"/>

                </LinearLayout>

                <TextView
                    style="@style/Widget.Card.Wrap"
                    android:textSize="10sp"
                    android:layout_marginStart="31dp"
                    android:letterSpacing="0.1"
                    android:textColor="@color/text_dark"
                    android:text="@string/next_step_two"/>
            </LinearLayout>

            <TextView
                style="@style/Widget.Card.Wrap"/>

            <Space style="@style/Widget.Card.layout_weight"/>

            <ImageView
                style="@style/Widget.Card.Wrap"
                android:src="@drawable/ic_step_one"
                android:contentDescription="@string/step_one"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Card.MatchWrap"
            app:cardCornerRadius="16dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                style="@style/Widget.Card.MatchWrap"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/Widget.Card.MatchWrap"
                    android:orientation="vertical">
                    
                    <LinearLayout
                        style="@style/Widget.Card.Wrap"
                        android:minHeight="16dp"
                        android:layout_marginBottom="4dp">

                        <TextView
                            style="@style/Widget.Card.Wrap"
                            android:textSize="12sp"
                            android:textFontWeight="600"
                            android:letterSpacing="0.1"
                            android:text="@string/product_title"/>

                        <TextView
                            style="@style/Widget.Card.Wrap"
                            android:layout_marginStart="6dp"
                            android:textColor="@color/green"
                            android:text="@string/asterisk"/>

                    </LinearLayout>

                    <EditText
                        style="@style/Widget.Card.MatchWrap"
                        android:padding="16dp"
                        android:background="@drawable/bg_post_product_edit_text"
                        android:hint="@string/enter_title"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/Widget.Card.Wrap"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Widget.Card.Wrap"
                        android:textSize="12sp"
                        android:textFontWeight="600"
                        android:letterSpacing="0.1"
                        android:layout_marginBottom="4dp"
                        android:text="@string/upload_photo"/>

                    <GridLayout
                        android:id="@+id/addPhotoGrid"
                        style="@style/Widget.Card.Wrap"
                        android:columnCount="2"
                        android:alignmentMode="alignMargins"
                        android:background="@drawable/bg_image_input">

                        <ImageView
                            android:id="@+id/addPhotoLayout"
                            style="@style/Widget.Card.Wrap"
                            android:src="@drawable/ic_upload_photo"
                            android:background="@drawable/bg_upload_image"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="24dp"
                            android:layout_margin="16dp"
                            />
                    </GridLayout>

                    <LinearLayout
                        style="@style/Widget.Card.Wrap"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Widget.Card.Wrap"
                            android:letterSpacing="0.2"
                            android:textSize="10sp"
                            android:textColor="@color/text_dark"
                            android:text="@string/size_less_than"/>

                        <TextView
                            style="@style/Widget.Card.Wrap"
                            android:layout_marginStart="8dp"
                            android:letterSpacing="0.2"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/text_dark"
                            android:text="@string/one_mb"/>

                        <Space style="@style/Widget.Card.layout_weight"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Widget.Card.MatchWrap"
            android:minHeight="48dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:letterSpacing="0.1"
            android:textColor="@color/white"
            android:background="@drawable/bg_continue_shopping"
            android:text="@string/continue_btn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>