<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6ECF4">

    <include
        android:id="@+id/toolbarNewShippingAddress"
        style="@style/Widget.Card.MatchWrap"
        layout="@layout/toolbar_back_title_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/newAddressScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarNewShippingAddress">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/shippingAddressForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:letterSpacing="0.05"
                        android:text="@string/details_for_shipping"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="First Name"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etFName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_faq_question"
                            android:hint="Enter First Name"
                            android:inputType="text"
                            android:letterSpacing="0.1"
                            android:minHeight="56dp"
                            android:paddingHorizontal="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="Middle Name (Optional)"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etMName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_faq_question"
                            android:hint="Enter Middle Name"
                            android:inputType="text"
                            android:letterSpacing="0.1"
                            android:minHeight="56dp"
                            android:paddingHorizontal="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="Last Name"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_faq_question"
                            android:hint="Enter Last Name"
                            android:inputType="text"
                            android:letterSpacing="0.1"
                            android:minHeight="56dp"
                            android:paddingHorizontal="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="@string/mobile_no"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etLName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_faq_question"
                            android:hint="@string/enter_mobile_no"
                            android:letterSpacing="0.1"
                            android:minHeight="56dp"
                            android:paddingHorizontal="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="@string/address"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_faq_question"
                            android:gravity="center"
                            android:minHeight="56dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etAddress"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/bg_faq_question"
                                android:hint="@string/enter_address"
                                android:letterSpacing="0.1"
                                android:minHeight="56dp"
                                android:paddingHorizontal="16dp" />

                            <ImageView
                                android:id="@+id/addLocationIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/location_icon"
                                android:padding="@dimen/padding_medium"
                                android:src="@drawable/ic_location" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:letterSpacing="0.05"
                            android:text="@string/select_a_label"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/addrLabelGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbHome"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:background="@drawable/bg_radio_selector"
                                android:button="@android:color/transparent"
                                android:gravity="center"
                                android:letterSpacing="0.05"
                                android:minHeight="32dp"
                                android:paddingHorizontal="8dp"
                                android:text="@string/home"
                                android:textColor="@drawable/text_radio"
                                android:textSize="14sp" />

                            <RadioButton
                                android:id="@+id/rbOffice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:background="@drawable/bg_radio_selector"
                                android:button="@android:color/transparent"
                                android:gravity="center"
                                android:letterSpacing="0.05"
                                android:minHeight="32dp"
                                android:paddingHorizontal="8dp"
                                android:text="@string/office"
                                android:textColor="@drawable/text_radio"
                                android:textSize="14sp" />

                            <RadioButton
                                android:id="@+id/rbOther"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_radio_selector"
                                android:button="@android:color/transparent"
                                android:gravity="center"
                                android:letterSpacing="0.05"
                                android:minHeight="32dp"
                                android:paddingHorizontal="8dp"
                                android:text="@string/other"
                                android:textColor="@drawable/text_radio"
                                android:textSize="14sp" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="16dp"
                        android:background="#E6ECF4"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.05"
                            android:text="@string/default_string_address"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchShippingAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:thumb="@drawable/bg_shipping_thumb"
                            app:showText="false"
                            app:switchMinWidth="34dp"
                            app:thumbTint="@null"
                            app:track="@drawable/bg_shipping_track"
                            app:trackTint="@null" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.05"
                            android:text="@string/default_billing_address"
                            android:textColor="@color/text_dark"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchBillingAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:thumb="@drawable/bg_shipping_thumb"
                            app:showText="false"
                            app:switchMinWidth="34dp"
                            app:thumbTint="@null"
                            app:track="@drawable/bg_shipping_track"
                            app:trackTint="@null" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_large"
                android:background="@drawable/bg_sell"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:minHeight="48dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>